--- a/android/build.gradle
+++ b/android/build.gradle
@@ -31,3 +31,7 @@ android {
         disable 'InvalidPackage'
     }
 }
+
+dependencies {
+    implementation 'androidx.annotation:annotation:1.2.0'
+}
